--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "dev": "cd componentes-7 && npm run dev",
+    "build": "cd componentes-7 && npm run build"
+  },
   "dependencies": {
     "axios": "^1.13.5",
     "nodemon": "^3.1.13"
